Better handling of command line arguments and power status
